# python_labs

./: .coverage  .gitignore  README.md  main.md  pyproject.toml  test_error.py  test_lab_08.py
data1/lab_08/: students_output.json  test_error.json
data1/lab_09/: students.csv
src/1sem/lab_01/: 01_greeting.py  03_discount_vat.py  05_initials_and_len.py  06.py  07.py  nm.4.py
src/1sem/lab_02/: arrays.py  matrix.py  tuples.py
src/1sem/lab_03/: text.py  text_stats.py
src/1sem/lab_04/: io_txt_csv.py  text_report.py
src/1sem/lab_05/: csv_xlsx.py  json_csv.py
src/1sem/lab_05/data2/samples/: cities.csv  people.txt
src/1sem/lab_06/: cli_convert.py  cli_text.py  word_file.docx
src/1sem/lab_07/: README.md
src/1sem/lab_08/: README.md  __init__.py  models.py  serialize.py
src/1sem/lab_09/: group.py
src/1sem/lab_10/: README.md  linked_list.py  structures.py  test_manual.py
src/2sem/: README.md
src/2sem/lab01/: README.md  demo.py  model.py
src/lab_01/: 01_greeting.py  02_sum_avg.py  04_minutes_to_hhmm.py  05_initials_and_len.py  06.py  07.py
src/lab_02/: 1.py  4.py  8.py  arrays.py  matrix.py  sd.py  tuples.py
src/lab_03/: text.py  text_stats.py
src/lab_04/: io_txt_csv.py  text_report.py
src/lab_05/: csv_xlsx.py  json_csv.py
src/lab_05/data2/samples/: cities.csv  people.csv  people.json
src/lab_06/: cli_convert.py  cli_text.py
src/lab_07/: README.md
src/lab_08/: README.md  models.py  serialize.py
src/lab_09/: group.py
src/lab_10/: README.md  linked_list.py  structures.py
src/python_labs.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/sem2/lab01/: validate.py
src/sem2/lab02/: README.md  collection.py  demo.py  model.py
src/sem2/lab03/: README.md  base.py  collection.py  demo.py  models.py
src/sem2/lab04/: README.md  collection.py  demo.py  interfaces.py  models.py
tests/: test_json_csv.py  test_text.py
