[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "python-labs"
version = "0.1.0"
description = "Учебный Python-проект для лабораторных работ (ЛР7: pytest + black)"
readme = "README.md"
requires-python = ">=3.11"

# runtime-зависимости (в ЛР можно оставить пустым)
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "black>=24.0",
  "ruff>=0.6",
]

# ---- pytest ----
[tool.pytest.ini_options]
# чтобы импорты вида `from lab_03.text import ...` работали
pythonpath = ["src"]
addopts = "-ra"

# ---- black ----
[tool.black]
line-length = 88
target-version = ["py311"]
exclude = '''
(
  ^\.venv/
  | ^images/
  | ^build/
  | ^dist/
)
'''

# ---- coverage (для pytest-cov) ----
[tool.coverage.run]
source = ["src"]
branch = true