[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta" #Без этой секции pip install -e . работать не будет.

[project]
name = "python-labs"
version = "0.1.0"
description = "Учебный Python-проект для лабораторных работ (ЛР7: pytest + black)"
readme = "README.md"
requires-python = ">=3.11"

# runtime-зависимости (в ЛР можно оставить пустым)
dependencies = []

[project.optional-dependencies] #Это список инструментов, которые нужны только разработчику, не для работы программы:
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0", #измерение покрытия
  "black>=24.0",
  "ruff>=0.6",
]

# ---- pytest ----
[tool.pytest.ini_options]
# чтобы импорты вида `from lab_03.text import ...` работали
pythonpath = ["src"]
addopts = "-ra" #вывод коротких причин пропусков/ошибок, показать всё

# ---- black ----
[tool.black]
line-length = 88 #Максимальная длина строк
target-version = ["py311"]
#Black не будет форматировать файлы в этих папках:
exclude = '''
(
  ^\.venv/
  | ^images/
  | ^build/
  | ^dist/
)
'''

#❌ Покрытие строк
#
#Проверяет только факт, что строка была выполнена.
#
#✔ Покрытие веток
#
#Проверяет:
#	•	была ли выполнена ветка if
#	•	была ли выполнена ветка else
#	•	были ли выполнены все return-ветки
#	•	были ли выполнены все break/continue варианты

# ---- coverage (для pytest-cov) ----
[tool.coverage.run]
source = ["src"] #Покрытие тестами измеряется только для кода внутри src/ (а не для тестов или утилит).
branch = true #Покрытие считается по веткам, а не только по строкам.